--- a/wth_foundation/wth/trunk/config.h.in
+++ b/wth_foundation/wth/trunk/config.h.in
@@ -1,15 +1,4 @@
 /* config.h.in.  Generated from configure.in by autoheader.  */
-/* wth */
-#undef PACKAGE
-
-/* 0.4.2 */
-#undef VERSION
-
-/* Enable GNU extensions */
-#define _GNU_SOURCE
-
-/* CPU_VENDOR_OS */
-#undef CPU_VENDOR_OS
 
 /* Define to 1 if you have the <fcntl.h> header file. */
 #undef HAVE_FCNTL_H
@@ -37,6 +26,9 @@
 
 /* Define to 1 if you have the `socket' function. */
 #undef HAVE_SOCKET
+
+/* Define to 1 if you have the <sqlite3.h> header file. */
+#undef HAVE_SQLITE3_H
 
 /* Define to 1 if you have the <stdint.h> header file. */
 #undef HAVE_STDINT_H
@@ -122,11 +114,14 @@
 /* Compile with xmlrpc functionality. */
 #undef WITH_LIBXMLRPC
 
+/* Description */
+#undef _GNU_SOURCE
+
 /* Define to empty if `const' does not conform to ANSI C. */
 #undef const
 
 /* Define to `int' if <sys/types.h> does not define. */
 #undef pid_t
 
-/* Define to `unsigned' if <sys/types.h> does not define. */
+/* Define to `unsigned int' if <sys/types.h> does not define. */
 #undef size_t
